font jumping fix v1µ

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -3,7 +3,6 @@
   src: url("/fonts/GoogleSansCode-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -11,7 +10,6 @@
   src: url("/fonts/GoogleSansCode-Italic.woff2") format("woff2");
   font-weight: 400;
   font-style: italic;
-  font-display: swap;
 }
 
 @font-face {
@@ -19,7 +17,6 @@
   src: url("/fonts/GoogleSansCode-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -27,7 +24,6 @@
   src: url("/fonts/GoogleSansCode-MediumItalic.woff2") format("woff2");
   font-weight: 500;
   font-style: italic;
-  font-display: swap;
 }
 
 @font-face {
@@ -35,7 +31,6 @@
   src: url("/fonts/GoogleSansCode-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -43,7 +38,6 @@
   src: url("/fonts/GoogleSansCode-BoldItalic.woff2") format("woff2");
   font-weight: 700;
   font-style: italic;
-  font-display: swap;
 }
 
 @font-face {
@@ -51,7 +45,6 @@
   src: url("/fonts/Micro5-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -59,7 +52,6 @@
   src: url("/fonts/ShareTechMono-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -67,5 +59,4 @@
   src: url("/fonts/TronicaMono.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
 }
